--- a/packages/storybook-html/stories/components/footer/footer.html
+++ b/packages/storybook-html/stories/components/footer/footer.html
@@ -93,7 +93,7 @@
               <a href="https://about.uq.edu.au/faculties-schools-institutes-centres" class="uq-footer__navigation-link">Faculties, schools, institutes and centres</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://organisation.about.uq.edu.au" class="uq-footer__navigation-link">Divisions and departments</a>
+              <a href="https://uq.edu.au/departments" class="uq-footer__navigation-link">Divisions and departments</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://campuses.uq.edu.au" class="uq-footer__navigation-link">Campuses, maps and transport</a>
@@ -190,7 +190,7 @@
               <a href="https://about.uq.edu.au/experts" class="uq-footer__navigation-link">Find an expert</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://organisation.about.uq.edu.au" class="uq-footer__navigation-link">Divisions and departments</a>
+              <a href="https://uq.edu.au/departments" class="uq-footer__navigation-link">Divisions and departments</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://campuses.uq.edu.au" class="uq-footer__navigation-link">Our campuses</a>
