--- a/packages/storybook-html/stories/components/header/header.html
+++ b/packages/storybook-html/stories/components/header/header.html
@@ -168,7 +168,7 @@
                         <li><a href="https://about.uq.edu.au/strategy-values" data-gtm-label="About > Strategy and values">Strategy and values</a></li>
                         <li><a href="https://about.uq.edu.au/strategy-values/strategic-plan/domains/teaching-learning-student-experience" data-gtm-label="About > Learning, teaching and student experience">Learning, teaching and student experience</a></li>
                         <li><a href="https://about.uq.edu.au/leadership-governance" data-gtm-label="About > Leadership and governance">Leadership and governance</a></li>
-                        <li><a href="https://about.uq.edu.au/experts" data-gtm-label="About > Faculties, schools, centres and institutes">Faculties, schools, centres and institutes</a></li>
+                        <li><a href="https://about.uq.edu.au/faculties-schools-institutes-centres" data-gtm-label="About > Faculties, schools, centres and institutes">Faculties, schools, centres and institutes</a></li>
                         <li><a href="https://campuses.uq.edu.au/information-and-services/security" data-gtm-label="About > Safety and security">Safety and security</a></li>
                         <li><a href="https://about.uq.edu.au/experts" data-gtm-label="About > Find an expert">Find an expert</a></li>
                         <li><a href="https://policies.uq.edu.au" data-gtm-label="About > Policies and procedures">Policies and procedures</a></li>
@@ -191,7 +191,7 @@
                     <div class="megamenu__menu">
                       <ul>
                         <li><a href="https://about.uq.edu.au/careers" data-gtm-label="About > Careers and job search">Careers and job search</a></li>
-                        <li><a href="https://about.uq.edu.au/careers" data-gtm-label="About > Why work at UQ">Why work at UQ</a></li>
+                        <li><a href="https://about.uq.edu.au/careers/why-work-uq" data-gtm-label="About > Why work at UQ">Why work at UQ</a></li>
                         <li><a href="https://about.uq.edu.au/careers/equity-diversity-inclusion" data-gtm-label="About > Equity, diversity and inclusion">Equity, diversity and inclusion</a></li>
                       </ul>
                     </div>
@@ -367,7 +367,7 @@
             <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Working with us</a>
             <ul>
               <li><a href="https://about.uq.edu.au/careers" data-gtm-label="About > Careers and job search">Careers and job search</a></li>
-              <li><a href="https://about.uq.edu.au/careers" data-gtm-label="About > Why work at UQ">Why work at UQ</a></li>
+              <li><a href="https://about.uq.edu.au/careers/why-work-uq" data-gtm-label="About > Why work at UQ">Why work at UQ</a></li>
               <li><a href="https://about.uq.edu.au/careers/equity-diversity-inclusion" data-gtm-label="About > Equity, diversity and inclusion">Equity, diversity and inclusion</a></li>
             </ul>
           </li>
