--- a/packages/storybook-html/stories/components/header/header.html
+++ b/packages/storybook-html/stories/components/header/header.html
@@ -38,7 +38,7 @@
                         <li><a href="https://study.uq.edu.au/why-choose-uq" data-gtm-label="Study > Why choose UQ">Why choose UQ</a></li>
                         <li><a href="https://study.uq.edu.au/enhance-your-employability" data-gtm-label="Study > Enhance your employability">Enhance your employability</a></li>
                         <li><a href="https://study.uq.edu.au/university-life" data-gtm-label="Study > Life at UQ and accommodation">Life at UQ and accommodation</a></li>
-                        <li><a href="https://campuses.uq.edu.au" data-gtm-label="Study > Our campuses">Our campuses</a></li>
+                        <li><a href="https://campuses.uq.edu.au" data-gtm-label="Study > Campuses, maps and transport">Campuses, maps and transport</a></li>
                         <li><a href="https://study.uq.edu.au/events" data-gtm-label="Study > Events for prospective students">Events for prospective students</a></li>
                       </ul>
                     </div>
