update Search URL

--- a/packages/storybook-html/stories/components/header/header-interim.html
+++ b/packages/storybook-html/stories/components/header/header-interim.html
@@ -158,7 +158,7 @@
   </nav>
   <div class="uq-header__search" data-gtm-category="Search">
     <div class="uq-header__search-container">
-      <form action="https://search.uq.edu.au" method="get">
+      <form action="https://search.uq.edu.au/" method="get">
         <fieldset>
           <div class="uq-header__search-query">
             <label for="edit-q" class="visually-hidden uq-header__search-query-label">Search term</label>
