--- a/packages/storybook-html/stories/components/header/header.html
+++ b/packages/storybook-html/stories/components/header/header.html
@@ -392,7 +392,7 @@
   </nav>
   <div class="uq-header__search" data-gtm-category="Search">
     <div class="uq-header__search-container">
-      <form action="https://search.uq.edu.au" method="get" data-gtm-action="Text search" data-gtm-form-action>
+      <form action="https://search.uq.edu.au/" method="get" data-gtm-action="Text search" data-gtm-form-action>
         <fieldset>
           <div class="uq-header__search-query">
             <label for="edit-q" class="visually-hidden uq-header__search-query-label">Search term</label>
