--- a/packages/storybook-email/.storybook/preview.scss
+++ b/packages/storybook-email/.storybook/preview.scss
@@ -22,40 +22,16 @@
 .uqds-colour--white {
   color: core.$white;
 }
+ß
 
-/* Typography */
-.uqds-h1 {
-  color: core.$black;
+/* Email Fonts */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
   font-family: core.$font-body;
-  font-size: core.$font-size-xxxl; /* 32px */
-  line-height: core.$line-height-h; /* 38px */
   font-weight: core.$font-weight-medium; /* 500 */
-}
-.uqds-h2 {
-  color: core.$black;
-  font-family: core.$font-body;
-  font-size: core.$font-size-xxl; /* 24px */
-  line-height: core.$line-height-h; /* 29px */
-  font-weight: core.$font-weight-medium; /* 500 */
-}
-.uqds-h3 {
-  color: core.$black;
-  font-family: core.$font-body;
-  font-size: core.$font-size-l; /* 18px */
-  line-height: core.$line-height-h; /* 29px */
-  font-weight: core.$font-weight-medium; /* 500 */
-}
-.uqds-body {
-  color: core.$grey-900;
-  font-family: core.$font-body;
-  font-size: core.$font-size-m; /* 16px */
-  line-height: core.$line-height; /* 26px */
-  font-weight: core.$font-weight-normal; /* 400 */
-}
-.uqds-link {
-  color: core.$purple-500;
-  font-family: core.$font-body;
-  font-size: core.$font-size-m; /* 16px */
-  line-height: core.$line-height; /* 26px */
-  font-weight: core.$font-weight-normal; /* 400 */
 }
