--- a/packages/storybook-html/stories/components/profile/index.html
+++ b/packages/storybook-html/stories/components/profile/index.html
@@ -1,17 +1,75 @@
 <style>
     .uq-profile {
-        
-    }  
+        display: flex;
+        flex-direction: row;
+        gap: 1.5rem;
+    } 
+   .uq-profile__content {
+        flex-grow: 1;
+    }
+    .uq-profile__content *:first-child {
+        margin-top: 0;
+    }
+    .uq-profile__content *:last-child {
+        margin-bottom: 0;
+    }
+    .uq-profile--image {
+        display:none;
+        order: -1;
+    }
     .uq-profile__image {
         width: 80px;
         height: 80px;
-        background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='80' height='80' fill='none'%3E%3Ccircle cx='53.5' cy='53.5' r='53.5' fill='%23E2E2E2'/%3E%3Ccircle cx='53.5' cy='39.233' r='20.211' fill='%23fff'/%3E%3Cmask id='a' width='80' height='80' x='0' y='0' maskUnits='userSpaceOnUse' style='mask-type:alpha'%3E%3Ccircle cx='53.5' cy='53.5' r='53.5' fill='%23fff'/%3E%3C/mask%3E%3Cg mask='url(%23a)'%3E%3Ccircle cx='53.797' cy='104.919' r='40.125' fill='%23fff'/%3E%3C/g%3E%3Ccircle cx='53.5' cy='53.5' r='53' stroke='%23E2E2E2'/%3E%3C/svg%3E");
+        border-radius: 50%;
+        background-color: #dcdcdd;
+        background-image: url("data:image/svg+xml,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22UTF-8%22%3F%3E%3Csvg%20id%3D%22Layer_1%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2080%2080%22%3E%3Cdefs%3E%3Cstyle%3E.cls-1%7Bfill%3A%23dcdcdd%3B%7D.cls-2%7Bfill%3A%23fff%3B%7D%3C%2Fstyle%3E%3C%2Fdefs%3E%3Ccircle%20class%3D%22cls-1%22%20cx%3D%2240%22%20cy%3D%2240%22%20r%3D%2240%22%2F%3E%3Cpath%20class%3D%22cls-2%22%20d%3D%22M12.21%2C67.71c7.11%2C7.13%2C16.93%2C11.54%2C27.79%2C11.54s20.98-4.55%2C28.11-11.87c-4.4-11.09-15.22-18.94-27.89-18.94s-23.7%2C8-28.02%2C19.27Z%22%2F%3E%3Ccircle%20class%3D%22cls-2%22%20cx%3D%2240%22%20cy%3D%2229.33%22%20r%3D%2215.11%22%2F%3E%3C%2Fsvg%3E");
     } 
+    @media (min-width: 641px) {
+        .uq-profile--image {
+            display:block
+        }
+    }
+    .uq-profile__image img {
+        aspect-ratio: 1 / 1;
+        border-radius: 50%;
+        width: 100%;
+        height: auto;
+        object-fit: cover; /* The cover value makes the image scale up or down to completely fill the container while maintaining its original aspect ratio */
+        object-position: center; /* centers the image within the container */
+    }
+
 </style>
 
 
 <div class="uq-profile">
-    <div class="uq-profile__image"></div>
+    <div class="uq-profile__content">
     <h2>Profile</h2>
     <p>This is the profile component.</p>
+    </div>
+    <div class="uq-profile__image"></div>
+</div>
+
+<p>
+<hr>
+</p>
+
+<div class="uq-profile">
+    <div class="uq-profile__content">
+    <h2>Profile</h2>
+    <p>This is the profile component.</p>
+    </div>
+    <div class="uq-profile__image">
+        <img src="../../../public/images/hero/hero-example-1.jpg" alt="Profile Image" />
+    </div>
+</div>
+
+<p>
+<hr>
+</p>
+
+<div class="uq-profile">
+    <div class="uq-profile__content">
+    <h2>Profile</h2>
+    <p>This is the profile component.</p>
+    </div>
 </div>
