added list example

--- a/packages/profile/src/scss/_component.scss
+++ b/packages/profile/src/scss/_component.scss
@@ -33,3 +33,14 @@
     display: block;
   }
 }
+
+.uq-staff-listing {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.uq-staff-listing li {
+}
