Update with Accessible updates

--- a/packages/storybook-html/stories/components/header/header.html
+++ b/packages/storybook-html/stories/components/header/header.html
@@ -11,8 +11,23 @@
     <div class="uq-header__nav-primary" data-gtm-category="Primary header">
       <nav class="uq-header__nav-primary-container" aria-label="primary navigation">
         <ul class="uq-header__nav-primary-list">
-          <li class="uq-header__nav-primary-item"><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://study.uq.edu.au" data-gtm-label="Study">Study</a>
-            <div class="uq-header__megamenu">
+          <li class="uq-header__nav-primary-item">
+            <a
+              class="uq-header__nav-primary-link nav-primary-link--has-dropdown"
+              href="https://study.uq.edu.au"
+              data-gtm-label="Study"
+              aria-haspopup="true"
+              aria-expanded="false"
+              aria-controls="megamenu-study"
+              id="nav-study"
+              tabindex="0"
+              >Study</a>
+            <div
+              class="uq-header__megamenu"
+              id="megamenu-study"
+              role="menu"
+              aria-labelledby="nav-study"
+            >
               <div class="uq-header__megamenu-container">
                 <a href="https://study.uq.edu.au" class="megamenu__overview-link" data-gtm-label="Study > Study overview"><span class="megamenu__overview-label">Study overview</span></a>
                 <div class="megamenu__row">
@@ -63,8 +78,23 @@
               </div>
           </div>
           </li>
-          <li class="uq-header__nav-primary-item"><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://research.uq.edu.au"  data-gtm-label="Research">Research</a>
-            <div class="uq-header__megamenu">
+          <li class="uq-header__nav-primary-item">
+            <a
+              class="uq-header__nav-primary-link nav-primary-link--has-dropdown"
+              href="https://research.uq.edu.au"
+              data-gtm-label="Research"
+              aria-haspopup="true"
+              aria-expanded="false"
+              aria-controls="megamenu-research"
+              id="nav-research"
+              tabindex="0"
+              >Research</a>
+            <div
+              class="uq-header__megamenu"
+              id="megamenu-research"
+              role="menu"
+              aria-labelledby="nav-research"
+            >
               <div class="uq-header__megamenu-container">
                 <a href="https://research.uq.edu.au" class="megamenu__overview-link" data-gtm-label="Research > Research overview"><span class="megamenu__overview-label">Research overview</span></a>
                 <div class="megamenu__row">
@@ -109,8 +139,23 @@
               </div>
             </div>
           </li>
-          <li class="uq-header__nav-primary-item"><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://partners-community.uq.edu.au" data-gtm-label="Partners and community">Partners and community</a>
-            <div class="uq-header__megamenu">
+          <li class="uq-header__nav-primary-item">
+            <a
+              class="uq-header__nav-primary-link nav-primary-link--has-dropdown"
+              href="https://partners-community.uq.edu.au"
+              data-gtm-label="Partners and community"
+              aria-haspopup="true"
+              aria-expanded="false"
+              aria-controls="megamenu-partners"
+              id="nav-partners"
+              tabindex="0"
+              >Partners and community</a>
+            <div
+              class="uq-header__megamenu"
+              id="megamenu-partners"
+              role="menu"
+              aria-labelledby="nav-partners"
+            >
               <div class="uq-header__megamenu-container">
                 <a href="https://partners-community.uq.edu.au" class="megamenu__overview-link" data-gtm-label="Partners and community > Partners and community overview"><span class="megamenu__overview-label">Partners and community overview</span></a>
                 <div class="megamenu__row">
@@ -155,8 +200,23 @@
               </div>
             </div>
           </li>
-          <li class="uq-header__nav-primary-item"><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://about.uq.edu.au" data-gtm-label="About">About</a>
-            <div class="uq-header__megamenu">
+          <li class="uq-header__nav-primary-item">
+            <a
+              class="uq-header__nav-primary-link nav-primary-link--has-dropdown"
+              href="https://about.uq.edu.au"
+              data-gtm-label="About"
+              aria-haspopup="true"
+              aria-expanded="false"
+              aria-controls="megamenu-about"
+              id="nav-about"
+              tabindex="0"
+              >About</a>
+            <div
+              class="uq-header__megamenu"
+              id="megamenu-about"
+              role="menu"
+              aria-labelledby="nav-about"
+            >
               <div class="uq-header__megamenu-container">
                 <a href="https://about.uq.edu.au" class="megamenu__overview-link" data-gtm-label="About > About overview"><span class="megamenu__overview-label">About overview</span></a>
                 <div class="megamenu__row">
