Added accessible menu

--- a/packages/storybook-html/stories/components/header/header.html
+++ b/packages/storybook-html/stories/components/header/header.html
@@ -11,8 +11,16 @@
     <div class="uq-header__nav-primary" data-gtm-category="Primary header">
       <nav class="uq-header__nav-primary-container" aria-label="primary navigation">
         <ul class="uq-header__nav-primary-list">
-          <li class="uq-header__nav-primary-item"><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://study.uq.edu.au" data-gtm-label="Study">Study</a>
-            <div class="uq-header__megamenu">
+          <li class="uq-header__nav-primary-item">
+            <a id="study-menu-button" 
+     class="uq-header__nav-primary-link nav-primary-link--has-dropdown" 
+     href="https://study.uq.edu.au" 
+     data-gtm-label="Study"
+     role="button"
+     aria-haspopup="true"
+     aria-expanded="false"
+     aria-controls="study-megamenu">Study</a>
+  <div id="study-megamenu" class="uq-header__megamenu">
               <div class="uq-header__megamenu-container">
                 <a href="https://study.uq.edu.au" class="megamenu__overview-link" data-gtm-label="Study > Study overview"><span class="megamenu__overview-label">Study overview</span></a>
                 <div class="megamenu__row">
@@ -63,8 +71,16 @@
               </div>
           </div>
           </li>
-          <li class="uq-header__nav-primary-item"><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://research.uq.edu.au"  data-gtm-label="Research">Research</a>
-            <div class="uq-header__megamenu">
+          <li class="uq-header__nav-primary-item">
+            <a id="research-menu-button" 
+     class="uq-header__nav-primary-link nav-primary-link--has-dropdown" 
+     href="https://research.uq.edu.au" 
+     data-gtm-label="Research"
+     role="button"
+     aria-haspopup="true"
+     aria-expanded="false"
+     aria-controls="research-megamenu">Research</a>
+  <div id="research-megamenu" class="uq-header__megamenu">
               <div class="uq-header__megamenu-container">
                 <a href="https://research.uq.edu.au" class="megamenu__overview-link" data-gtm-label="Research > Research overview"><span class="megamenu__overview-label">Research overview</span></a>
                 <div class="megamenu__row">
@@ -109,8 +125,16 @@
               </div>
             </div>
           </li>
-          <li class="uq-header__nav-primary-item"><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://partners-community.uq.edu.au" data-gtm-label="Partners and community">Partners and community</a>
-            <div class="uq-header__megamenu">
+          <li class="uq-header__nav-primary-item">
+            <a id="partner-menu-button" 
+     class="uq-header__nav-primary-link nav-primary-link--has-dropdown" 
+     href="https://partners-community.uq.edu.au" 
+     data-gtm-label="Partners and community"
+     role="button"
+     aria-haspopup="true"
+     aria-expanded="false"
+     aria-controls="partners-megamenu">Partners and community</a>
+  <div id="partners-megamenu" class="uq-header__megamenu">
               <div class="uq-header__megamenu-container">
                 <a href="https://partners-community.uq.edu.au" class="megamenu__overview-link" data-gtm-label="Partners and community > Partners and community overview"><span class="megamenu__overview-label">Partners and community overview</span></a>
                 <div class="megamenu__row">
@@ -155,8 +179,16 @@
               </div>
             </div>
           </li>
-          <li class="uq-header__nav-primary-item"><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://about.uq.edu.au" data-gtm-label="About">About</a>
-            <div class="uq-header__megamenu">
+          <li class="uq-header__nav-primary-item">
+            <a id="about-menu-button" 
+     class="uq-header__nav-primary-link nav-primary-link--has-dropdown" 
+     href="https://about.uq.edu.au" 
+     data-gtm-label="About"
+     role="button"
+     aria-haspopup="true"
+     aria-expanded="false"
+     aria-controls="about-megamenu">About</a>
+  <div id="about-megamenu" class="uq-header__megamenu">
               <div class="uq-header__megamenu-container">
                 <a href="https://about.uq.edu.au" class="megamenu__overview-link" data-gtm-label="About > About overview"><span class="megamenu__overview-label">About overview</span></a>
                 <div class="megamenu__row">
