--- a/packages/core/src/scss/_partials/_text-constants.scss
+++ b/packages/core/src/scss/_partials/_text-constants.scss
@@ -1,3 +1,5 @@
+@use "media-constants";
+
 // font family
 $roboto: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $montserrat: "Montserrat", Helvetica, Arial, sans-serif;
@@ -32,3 +34,9 @@ $line-height-ui: 1;
 
 // 1% letter spacing
 $letter-spacing: 0.01rem;
+
+@media #{core.$screen-md-down} {
+    $font-size-xxxxl: 1.875rem; /* 30px - H1 */
+    $font-size-xxxl: 1.5rem; /* 24px - H2 */
+    $font-size-xxl: 1.375rem; /* 22px - H3 */
+}
