--- a/packages/avatar/src/scss/_component.scss
+++ b/packages/avatar/src/scss/_component.scss
@@ -6,7 +6,7 @@
   height: core.$space-uuul;
   border-radius: 50%;
   background-color: core.$grey-200;
-  background-image: url("data:image/svg+xml,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22UTF-8%22%3F%3E%3Csvg%20id%3D%22Layer_1%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2080%2080%22%3E%3Cdefs%3E%3Cstyle%3E.cls-1%7Bfill%3A%23dcdcdd%3B%7D.cls-2%7Bfill%3A%23fff%3B%7D%3C%2Fstyle%3E%3C%2Fdefs%3E%3Ccircle%20class%3D%22cls-1%22%20cx%3D%2240%22%20cy%3D%2240%22%20r%3D%2240%22%2F%3E%3Cpath%20class%3D%22cls-2%22%20d%3D%22M12.21%2C67.71c7.11%2C7.13%2C16.93%2C11.54%2C27.79%2C11.54s20.98-4.55%2C28.11-11.87c-4.4-11.09-15.22-18.94-27.89-18.94s-23.7%2C8-28.02%2C19.27Z%22%2F%3E%3Ccircle%20class%3D%22cls-2%22%20cx%3D%2240%22%20cy%3D%2229.33%22%20r%3D%2215.11%22%2F%3E%3C%2Fsvg%3E");
+  background-image: url("data:image/svg+xml,%3Csvg%20id%3D%22Layer_1%22%20data-name%3D%22Layer%201%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2080%2080%22%3E%3Ccircle%20class%3D%22cls-2%22%20cx%3D%2240%22%20cy%3D%2240%22%20r%3D%2240%22%20fill%3D%22%23dcdcdd%22%2F%3E%3Ccircle%20class%3D%22cls-1%22%20cx%3D%2240%22%20cy%3D%2229.33%22%20r%3D%2215.11%22%20fill%3D%22%23f8f8f8%22%2F%3E%3Cpath%20class%3D%22cls-1%22%20d%3D%22M11.92%2C68.48c7.22%2C7.12%2C17.13%2C11.52%2C28.08%2C11.52s21.16-4.53%2C28.41-11.85c-4.2-11.5-15.23-19.71-28.19-19.71s-24.19%2C8.37-28.3%2C20.04Z%22%20fill%3D%22%23f8f8f8%22%2F%3E%3C%2Fsvg%3E");
 
   & img {
     aspect-ratio: 1 / 1;
