fix: profile updates

--- a/packages/avatar/src/scss/_component.scss
+++ b/packages/avatar/src/scss/_component.scss
@@ -17,3 +17,10 @@
     object-position: center; /* centers the image within the container */
   }
 }
+
+@media #{core.$screen-lg-up} {
+  .uq-avatar {
+    width: 144px;
+    height: 144px;
+  }
+}
