--- a/packages/profile/src/scss/_component.scss
+++ b/packages/profile/src/scss/_component.scss
@@ -66,3 +66,6 @@
   /* Ensure the item doesn't shrink smaller than the min width (317px) defined in the grid-template-columns */
   min-width: 317px;
 }
+
+
+Oops
