fix: random comment adjustments to trigger package update

--- a/packages/site-header/src/scss/_component.scss
+++ b/packages/site-header/src/scss/_component.scss
@@ -41,7 +41,7 @@
       padding: core.$space-m core.$space-m 0 core.$space-m;
     }
   }
-
+  // title
   &__title {
     color: core.$purple-500;
     font-size: $title-font-size;
