--- a/packages/acknowledgement/src/scss/_component.scss
+++ b/packages/acknowledgement/src/scss/_component.scss
@@ -57,7 +57,7 @@
       color: core.$purple-500;
     }
   }
-
+  // large
   &--large &__content {
     padding: core.$space-xxl core.$space-l core.$space-l;
     @media (min-width: 40rem) {
