Updated line spacing on alert header

--- a/packages/alert/src/scss/_component.scss
+++ b/packages/alert/src/scss/_component.scss
@@ -16,6 +16,15 @@
     margin-top: 0;
   }
 
+  h1:first-child,
+  h2:first-child,
+  h3:first-child,
+  h4:first-child,
+  h5:first-child,
+  h6:first-child {
+    line-height: 24px;
+  }
+
   &__container {
     margin: 0 auto;
 
