Alerts: Added heading examples (#694)
* Added heading examples

* Updated line spacing on alert header

* improved specificity of Alert first child

--- a/packages/alert/src/scss/_component.scss
+++ b/packages/alert/src/scss/_component.scss
@@ -12,6 +12,19 @@
   line-height: core.$line-height;
   position: relative;
 
+  .uq-alert__message > *:first-child {
+    margin-top: 0;
+  }
+
+  .uq-alert__message > h1:first-child,
+  .uq-alert__message > h2:first-child,
+  .uq-alert__message > h3:first-child,
+  .uq-alert__message > h4:first-child,
+  .uq-alert__message > h5:first-child,
+  .uq-alert__message > h6:first-child {
+    line-height: 24px;
+  }
+
   &__container {
     margin: 0 auto;
 
