--- a/packages/header/src/scss/_component.scss
+++ b/packages/header/src/scss/_component.scss
@@ -929,6 +929,9 @@ body.no-scroll {
 .slide-menu li {
   margin-bottom: 0;
 }
+.uq-header__nav-mobile-link, .uq-header__nav-mobile-audience-link, .uq-header__nav-mobile-home, .slide-menu__backlink {
+  border-bottom: 1px solid #e8e8e8;
+}
 
 /* Not needed any more 
 .slide-menu .slide-menu__control {
@@ -971,7 +974,7 @@ body.no-scroll {
   height: 1.5rem;
   transform: translateY(50%);
   position: absolute;
-  left: 1.25rem;
+  left: 1rem;
   top: 0.25rem;
 }
 /* Child menu item */
