--- a/packages/header/src/scss/_component.scss
+++ b/packages/header/src/scss/_component.scss
@@ -929,7 +929,10 @@ body.no-scroll {
 .slide-menu li {
   margin-bottom: 0;
 }
-.uq-header__nav-mobile-link, .uq-header__nav-mobile-audience-link, .uq-header__nav-mobile-home, .slide-menu__backlink {
+.uq-header__nav-mobile-link,
+.uq-header__nav-mobile-audience-link,
+.uq-header__nav-mobile-home,
+.slide-menu__backlink {
   border-bottom: 1px solid #e8e8e8;
 }
 
